<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".DashboardActivity">

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/circularRevealCardView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:cardCornerRadius="360dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="1dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/profile" />

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_welcome_back"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/circularRevealCardView"
        app:layout_constraintTop_toTopOf="@+id/circularRevealCardView" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phaksi_enrico"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/circularRevealCardView"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_textfield"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawableEnd="@drawable/baseline_filter_list_24"
        android:drawablePadding="12dp"
        android:hint="@string/apa_yang_ingin_anda_lakukan"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/circularRevealCardView"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="24dp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:layout_editor_absoluteX="24dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/banner"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="24dp" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_Zakat"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/zakatlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/zakatlist"
        app:layout_constraintStart_toEndOf="@+id/iv_Zakat"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/zakatlist"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/zakatlist"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/zakatlist"
        app:layout_constraintEnd_toEndOf="@+id/iv_Zakat"
        app:layout_constraintStart_toStartOf="@+id/iv_Zakat"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/zakatlist"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/zakatlist"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/zakatlist"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/zakat"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/iv_Zakat"
        app:layout_constraintStart_toStartOf="@+id/iv_Zakat"
        app:layout_constraintTop_toBottomOf="@+id/iv_Zakat" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sedekah"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/iv_Zakat" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/infaq"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/iv_Zakat" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/waqaf"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/iv_Zakat" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/laporan"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/iv_Zakat"
        app:layout_constraintStart_toStartOf="@+id/iv_Zakat"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/kotak_amal"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/penyaluran"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/penyaluran"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />


</androidx.constraintlayout.widget.ConstraintLayout>