<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="12dp"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/jenis_zakat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/jenis_zakat"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_zakat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spinner_zakat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxStrokeColor="#E0E0E0"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/jenis_zakat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10px"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
        
        <AutoCompleteTextView
            android:id="@+id/autoComplete"
            android:text="@string/jenis_zakat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_jumlah_uang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/jumlahUang"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_zakat"
        app:layout_constraintBottom_toTopOf="@+id/etjumlah_uang"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etjumlah_uang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:background="@drawable/bg_textfield"
        android:drawableStart="@drawable/baseline_attach_money_24"
        android:drawablePadding="12dp"
        android:hint="@string/masukkan_jumlah_uang"
        android:inputType="number"
        android:padding="16dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_jumlah_uang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10px"
        />

    <TextView
        android:id="@+id/txt_jumlah_tanggungan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/jumlah_tanggungan"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etjumlah_uang"
        app:layout_constraintBottom_toTopOf="@+id/etTanggungan"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTanggungan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_textfield"
        android:drawableStart="@drawable/baseline_person_add_alt_1_24"
        android:drawablePadding="12dp"
        android:hint="@string/masukkan_jumlah_tanggungan"
        android:inputType="number"
        android:padding="16dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/txt_jumlah_tanggungan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/gambar"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="12dp"
        android:scaleType="centerCrop"
        android:src="@drawable/uploadstruk"
        app:layout_constraintTop_toBottomOf="@id/etTanggungan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btGambar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_stroke"
        android:letterSpacing="0.2"
        android:text="@string/uploadstruk"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/gambar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button"
        android:letterSpacing="0.2"
        android:text="@string/kirim_bukti_pembayaran"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/btGambar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
